[gd_scene load_steps=11 format=3 uid="uid://drtpxaydwef5n"]

[ext_resource type="Texture2D" uid="uid://b7cevabntfmi4" path="res://Fairy Pics/card_base.png" id="1_gj2hu"]
[ext_resource type="Script" path="res://card_base.gd" id="1_qkqrb"]
[ext_resource type="Texture2D" uid="uid://condjgrx55kpw" path="res://Fairy Pics/card_base_down.png" id="2_outm8"]
[ext_resource type="Texture2D" uid="uid://bktiyb52f0swo" path="res://Fairy Pics/card_base_up.png" id="3_l4bgm"]
[ext_resource type="Texture2D" uid="uid://ddbj6cbwvq2k7" path="res://Fairy Pics/card_score.png" id="4_0etek"]
[ext_resource type="Script" path="res://Crown_Image_Holder.gd" id="6_7wlgo"]
[ext_resource type="Texture2D" uid="uid://bq035c7yp46bb" path="res://Fairy Pics/1crown.png" id="6_lqff8"]
[ext_resource type="Texture2D" uid="uid://davou58y3oqtt" path="res://Fairy Pics/card_skill_TakeToken.png" id="6_x2nnc"]
[ext_resource type="PackedScene" uid="uid://bkhe3m1kioii0" path="res://token.tscn" id="7_hip5k"]
[ext_resource type="PackedScene" uid="uid://p623nwbfa560" path="res://cost_parent.tscn" id="10_ur8u3"]

[node name="Card_Base" type="Node2D"]
position = Vector2(-2, 120)
scale = Vector2(0.5, 0.5)
script = ExtResource("1_qkqrb")

[node name="CardBase" type="Sprite2D" parent="."]
position = Vector2(419, 261)
texture = ExtResource("1_gj2hu")

[node name="CardBaseDown" type="Sprite2D" parent="."]
position = Vector2(418, 263)
texture = ExtResource("2_outm8")

[node name="CardBaseUp" type="Sprite2D" parent="."]
position = Vector2(420, 262)
texture = ExtResource("3_l4bgm")

[node name="CardScore" type="Sprite2D" parent="."]
position = Vector2(413, 266)
texture = ExtResource("4_0etek")

[node name="CardPoints" type="RichTextLabel" parent="CardScore"]
offset_left = -261.0
offset_top = -392.0
offset_right = -199.0
offset_bottom = -308.0
scale = Vector2(1.71, 1.71)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 60
text = "1
"

[node name="CardSkill" type="Sprite2D" parent="."]
position = Vector2(486, 306)
scale = Vector2(1.185, 1.219)
texture = ExtResource("6_x2nnc")

[node name="TokenSkill" parent="CardSkill" instance=ExtResource("7_hip5k")]
visible = false
position = Vector2(-249.655, -126.897)
scale = Vector2(0.1, 0.1)

[node name="Crown_Base" type="Node2D" parent="."]
scale = Vector2(0.3, 0.3)

[node name="Crown_Image_Holder" type="Node2D" parent="Crown_Base"]
position = Vector2(2390, 650)
script = ExtResource("6_7wlgo")

[node name="Crown" type="Sprite2D" parent="Crown_Base/Crown_Image_Holder"]
position = Vector2(-996.667, -843.333)
texture = ExtResource("6_lqff8")

[node name="Timer" type="Timer" parent="Crown_Base"]
wait_time = 3.0
autostart = true

[node name="CardToken" parent="." instance=ExtResource("7_hip5k")]
position = Vector2(540, -160)
scale = Vector2(0.51, 0.51)

[node name="CostContainer" type="GridContainer" parent="."]
offset_left = 450.0
offset_top = 394.0
offset_right = 808.0
offset_bottom = 742.0
columns = 2

[node name="CostItem4" type="CenterContainer" parent="CostContainer"]
custom_minimum_size = Vector2(150, 140)
layout_mode = 2

[node name="Cost_Parent" parent="CostContainer/CostItem4" instance=ExtResource("10_ur8u3")]

[node name="CostItem2" type="CenterContainer" parent="CostContainer"]
custom_minimum_size = Vector2(150, 140)
layout_mode = 2

[node name="Cost_Parent" parent="CostContainer/CostItem2" instance=ExtResource("10_ur8u3")]

[node name="CostItem3" type="CenterContainer" parent="CostContainer"]
custom_minimum_size = Vector2(150, 140)
layout_mode = 2

[node name="Cost_Parent" parent="CostContainer/CostItem3" instance=ExtResource("10_ur8u3")]

[node name="CostItem1" type="CenterContainer" parent="CostContainer"]
custom_minimum_size = Vector2(150, 140)
layout_mode = 2

[node name="Cost_Parent" parent="CostContainer/CostItem1" instance=ExtResource("10_ur8u3")]

[connection signal="timeout" from="Crown_Base/Timer" to="Crown_Base/Crown_Image_Holder" method="_on_timer_timeout"]
